[gd_scene load_steps=10 format=2]

[ext_resource path="res://script/Topa.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/upheavtt.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://script/Score.gd" type="Script" id=5]
[ext_resource path="res://script/Game1.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 319.122, 30.0458 )

[node name="Game1" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spawn" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="NextLevel" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Background" parent="." instance=ExtResource( 3 )]

[node name="Jump" type="Button" parent="."]
margin_right = 579.0
margin_bottom = 1023.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Topa" parent="." instance=ExtResource( 1 )]

[node name="Score" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.807843 )
margin_left = 104.313
margin_top = 65.0
margin_right = 464.313
margin_bottom = 173.0
custom_fonts/font = SubResource( 1 )
text = "score"
align = 1
valign = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dead" type="Label" parent="Score"]
margin_left = -56.9357
margin_top = 842.049
margin_right = 425.064
margin_bottom = 906.049
custom_fonts/font = SubResource( 2 )
text = "topa is dead!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Best" type="Label" parent="Score"]
margin_left = 110.359
margin_top = -40.4539
margin_right = 225.359
margin_bottom = 0.546143
custom_fonts/font = SubResource( 3 )
text = "Best:"
align = 1
valign = 1

[node name="Floor" type="Area2D" parent="." groups=[
"wall",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 282.841, -38.9995 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Floor"]
position = Vector2( 284.285, 1067.18 )
shape = SubResource( 4 )
[connection signal="timeout" from="Spawn" to="." method="_on_Spawn_timeout"]
[connection signal="timeout" from="NextLevel" to="." method="_on_NextLevel_timeout"]
[connection signal="button_down" from="Jump" to="Topa" method="_on_Jump_button_down"]
[connection signal="button_down" from="Jump" to="." method="_on_Jump_button_down"]
